panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__literal__test_error_empty_char_literal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/literal/test_error_empty_char_literal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (expression ''))))

----- stderr -----
